// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineEditInput /> InlineEditInput - default 1`] = `
<span
  className="inline-edit-input-edit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-pen fa-w-16 fa-fw icon-addon-left"
    data-icon="pen"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`<InlineEditInput /> InlineEditInput - disabled save button when text is not valid 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;

exports[`<InlineEditInput /> InlineEditInput - edit mode 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;

exports[`<InlineEditInput /> InlineEditInput - read mode 1`] = `
<span
  className="inline-edit-input-edit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-pen fa-w-16 fa-fw icon-addon-left"
    data-icon="pen"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`<InlineEditInput /> InlineEditInput - saving in edit mode 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-spinner fa-w-16 fa-spin fa-fw "
      data-icon="spinner"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={true}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;
